<resources>

    // Startscreen
    <string name="app_name">Studinazor</string>
    <string name="newsfeed_string">Newsfeed</string>
    <string name="todo_liste_string">ToDo-Liste</string>
    <string name="einkaufsliste_string">Einkaufsliste</string>
    <string name="stundenplan_string">Stundenplan</string>
    <string name="startbildschirm_string">Startbildschirm</string>

    //To-Do-Liste
    <string name="todo_text_task">Neue Aufgabe</string>
    <string name="todo_text_button"> + </string>
    <string name="text_task">Aufgabe</string>
    <string name="text_date">Datum</string>
    <string name="menu_todo_sort">Sort by Date</string>
    <string name="menu_delete_all">Alles Löschen</string>
    <string name="menu_delete_task">Löschen</string>
    <string name="menu_edit_task">Bearbeiten</string>
    <string name="delete_task">Löschen</string>
    <string name="edit_task">Bearbeiten</string>
    <string name="notification_date">Datum</string>
    <string name="notification_time">Zeit</string>
    <string name="notification_reminder">Erinnere mich</string>
    <string name="notification_switch">Auswahl</string>
    <string name="date_reminder_default">Heute</string>
    <string name="date_error_check_again">Dieses Datum ist schon vorbei.</string>

    //Stundeplan
    <string name="class_text">Vorlesungen</string>
    <string name="time_text">Uhrzeit</string>
    <string name="room_text">Raum</string>
    <string name="button_monday">Montag</string>
    <string name="button_tuesday">Dienstag</string>
    <string name="button_wednesday">Mittwoch</string>
    <string name="button_thursday">Donnerstag</string>
    <string name="button_friday">Freitag</string>
    <string name="first_class">8.00 - 10.00</string>
    <string name="second_class">10.00 - 12.00</string>
    <string name="third_class">12.00 - 14.00</string>
    <string name="fourth_class">14.00 - 16.00</string>
    <string name="fifth_class">16.00 - 18.00</string>
    <string name="sixth_class">18.00 - 20.00</string>
    <string name="input_class">Kurs</string>
    <string name="input_room">Raum</string>
    <string name="input_button">Eingaben speichern</string>
    <string name="time_freitag">Freitag</string>
    <string name="time_dienstag">Dienstag</string>
    <string name="time_donnerstag">Donnerstag</string>
    <string name="time_mittwoch">Mittwoch</string>
    <string name="time_montag">Montag</string>

    //Einkaufsliste
    <string name="einkauf_text_wip">Einkaufsliste</string>
    <string name="add_button">Hinzufügen</string>
    <string name="amount">Menge</string>
    <string name="item">Sache</string>

    <string-array name="units">
        <item>Gramm</item>
        <item>Kilogramm</item>
        <item>Liter</item>
        <item>Milliliter</item>
        <item>Stück</item>
        <item>Packung[en]</item>
        <item>Pfund</item>
    </string-array>

    <string name="item_delete_all">Alles Löschen</string>
    <string name="item_delete">Löschen</string>
    <string name="item_edit">Bearbeiten</string>
    <string name="edit_item_head">Bearbeiten</string>

    //NEWSTICKER
    <string name="newsticker_string">Newsticker</string>
    <string name="poweredBy_string">Powered by News API</string>
    <string name="newsticker_start_string">Newsticker</string>
    <string name="newsticker_description_string">Description</string>
    <string name="newsticker_source">Source</string>
    <string name="newsticker_poweredBy_string">Powered by News API</string>
    <string name="newsticker_head_string">Newsticker</string>
    <string name="newsticker_toggle_links_string">Links ein-/ausblenden</string>

    //keine Ahnung wo die hingehören
    <string name="add_item_hint">Add List</string>
    <string name="add_item_button_confirm">Add</string>
    <string name="action_sort">Sort by Date</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
