<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafad2">


    <TextView
        android:id="@+id/einkauf_text_wip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/einkauf_text_wip" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:background="#ffc125"
        android:layout_gravity="right"
        android:layout_margin="10dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/item_edit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textColorHint="#aaaaaa"/>

    <Spinner
        android:id="@+id/item_spinner_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/units"></Spinner>

    <EditText
        android:id="@+id/item_edit_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/item"
        android:textColorHint="#aaaaaa"
        android:inputType="textCapSentences"/>

</LinearLayout>


    <ListView
        android:id="@+id/shop_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>