<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:paddingBottom="15dp"
    android:orientation="vertical"
    android:background="#F0FFF0">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_montag"
        android:textSize="30sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/time_text_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:text="@string/time_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/class_text_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.14"
            android:text="@string/class_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/room_text_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/room_text"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first_class_monday"
            android:layout_width="0dp"
            android:layout_weight="0.80"
            android:layout_height="wrap_content"
            android:text="@string/first_class"
            />

        <EditText
            android:id="@+id/input_first_class_monday"
            android:layout_width="0dp"
            android:layout_weight="1.14"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/input_first_room_monday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/second_class_monday"
            android:layout_width="0dp"
            android:layout_weight="0.80"
            android:layout_height="wrap_content"
            android:text="@string/second_class" />


        <EditText
            android:id="@+id/input_second_class_monday"
            android:layout_width="0dp"
            android:layout_weight="1.14"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/input_second_room_monday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/third_class_monday"
            android:layout_width="0dp"
            android:layout_weight="0.80"
            android:layout_height="wrap_content"
            android:text="@string/third_class" />

        <EditText
            android:id="@+id/input_third_class_monday"
            android:layout_width="0dp"
            android:layout_weight="1.14"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/input_third_room_monday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fourth_class_monday"
            android:layout_width="0dp"
            android:layout_weight="0.80"
            android:layout_height="wrap_content"
            android:text="@string/fourth_class" />

        <EditText
            android:id="@+id/input_fourth_class_monday"
            android:layout_width="0dp"
            android:layout_weight="1.14"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/input_fourth_room_monday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fifth_class_monday"
            android:layout_width="0dp"
            android:layout_weight="0.80"
            android:layout_height="wrap_content"
            android:text="@string/fifth_class"
            />

        <EditText
            android:id="@+id/input_fifth_class_monday"
            android:layout_width="0dp"
            android:layout_weight="1.14"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/input_fifth_room_monday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sixth_class_monday"
            android:layout_width="0dp"
            android:layout_weight="0.80"
            android:layout_height="wrap_content"
            android:text="@string/sixth_class"
            />

        <EditText
            android:id="@+id/input_sixth_class_monday"
            android:layout_width="0dp"
            android:layout_weight="1.14"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/input_sixth_room_monday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/input_button_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_button"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:background="#C1FFC1"
        />

</LinearLayout>
</ScrollView>