<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/StartToNewsfeedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/newsfeed_string"
            android:background="@color/StartScreen_NewstickerButton"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/StartToEinkaufButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/einkaufsliste_string"
            android:background="@color/StartScreen_EinkaufslisteButton"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/StartToToDoButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/todo_liste_string"
            android:background="@color/StartScreen_ToDoListeButton"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/StartToStundenplanButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stundenplan_string"
            android:background="@color/StartScreen_StundenplanButton"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
