<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/edit_dialog_layout"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp" >

    <TextView
        android:id="@+id/edit_item_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/edit_item_head"/> 


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_dialog_input_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:textColorHint="@color/einkaufslisteHintColor"
            android:inputType="numberDecimal"/>

        <Spinner
            android:id="@+id/edit_dialog_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/units"></Spinner>

        <EditText
            android:id="@+id/edit_dialog_input_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/item"
            android:textColorHint="@color/einkaufslisteHintColor"
            android:inputType="textCapSentences"/>

    </LinearLayout>

</LinearLayout>